--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id ="meme-list-holder">
     <h2>Memes</h2>
     <form class="text-center" id="meme-form">
-			<input type="text" id="meme-input" placeholder="search memes..." />
+			<input type="text" id="meme-input" onkeyup="searchFunction()" placeholder="search memes..." />
 
 			<input type="submit" value="Submit" />
         </form>
