--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form class="text-center" id="meme-form">
 			<input type="text" id="meme-input" onkeyup="searchFunction()" placeholder="search memes..." />
 
-			<input type="submit" value="Submit" />
+			<input type="submit" id='submit' value="Submit" />
         </form>
     <ul id="meme-list">
       
